# Fine-Art-Archive

./: .gitignore  .project_modules.txt  CODE_TAB_HANDOFF.md  Issues.txt  README.md  langsmith-fleet-worker-attempt.json  pyproject.toml
.agents/: issue-18-ledger.yml  issue-19-ledger.yml  issue-2-ledger.yml  issue-20-ledger.yml  issue-4-ledger.yml  issue-5-ledger.yml
.github/workflows/: agents-80-pr-event-hub.yml  agents-81-gate-followups.yml  agents-auto-label.yml  agents-auto-pilot.yml  agents-capability-check.yml  agents-decompose.yml  agents-dedup.yml  agents-issue-optimizer.yml  agents-keepalive-sweep.yml  agents-verify-to-new-pr.yml  agents-weekly-metrics.yml  backplane-conformance.yml  ci.yml  pr-00-gate.yml
agents/: codex-177.md  codex-179.md  codex-180.md  codex-181.md  codex-182.md  codex-248.md
config/: host_registry.yaml  source_quality.yaml  sources_seed.yaml
config/known_works/: Q43270.yaml  Q5582.yaml  Q762.yaml
config/wacz/: README.md  backfill_queue.txt  policy.example.yaml
docs/: NEXT_PHASE_PLAN.md
schemas/: meta.schema.json
scripts/: emit_crosswalk.py  emit_iiif.py  finalize_acquisition.py  fixity.py  perceptual_dedupe.py  propose_subject_tags.py  requirements-dedup.txt  run_companion_app.sh  sync_dev_dependencies.py  sync_test_dependencies.py  visual_dedupe.py
src/fine_art_archive/: __init__.py  crosswalk.py  fixity.py  iiif.py  sidecar.py
src/fine_art_archive/api/: __init__.py  config.py  main.py  store.py
src/fine_art_archive/collect/: acquisition_flow.py  dedup_cascade.py  dedupe.py  discovery.py  host_registry.py  quality.py  reference.py  verify.py
src/fine_art_archive/collect/sources/: _shared.py  artic.py  cleveland.py  google_arts_culture.py  met.py  rijksmuseum.py
src/fine_art_archive/display/: hints.py  render.py
src/fine_art_archive/identity/: __init__.py  artist_resolver.py  getty.py
src/fine_art_archive/known_works/: __init__.py  fetchers.py
src/fine_art_archive/parsers/: meural_filename.py  semantic.py  year_utils.py
src/fine_art_archive/quality/: __init__.py  source_quality.py
src/fine_art_archive/ui/: index.html
src/my_project/: __init__.py  main.py
tests/: __init__.py  test_acquisition_flow.py  test_acquisition_routing.py  test_canonical_artists.yaml  test_companion_api.py  test_companion_app_api.py  test_companion_app_config.py  test_companion_app_security.py  test_crosswalk.py  test_dedup_cascade.py  test_dedupe.py  test_discovery.py  test_display_hints.py  test_finalize_acquisition.py  test_fixity.py  test_getty_resolve.py  test_host_registry.py  test_iiif.py  test_known_works_fetchers.py  test_meural_filename.py  test_perceptual_dedupe.py  test_propose_subject_tags.py  test_quality.py  test_render.py  test_render_color.py  test_semantic_parser.py  test_sidecar.py  test_site_anchored.py  test_source_adapter_helpers.py  test_source_quality.py  test_source_quality_wiring.py  test_store_cache_reload.py  test_sync_test_dependencies.py  test_test_dependencies.py  test_verify.py  test_verify_embeddings.py
tools/: __init__.py
