[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fine-art-archive"
version = "0.1.0"
description = "Fine Art Archive — importable domain library, schema, collectors, and Companion API."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tim Stranske", email = "tim@stranskemo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115",
    "imagehash>=4.3",
    "jsonschema>=4.17.3,<4.23.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "iiif-prezi3==3.1.1",
    "ruff==0.15.20",
    "mypy>=2.1.0",
    "black==26.5.1",
    "httpx>=0.27",
]
app = [
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/stranske/Fine-Art-Archive"
Repository = "https://github.com/stranske/Fine-Art-Archive"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# Post-port baseline (issue #2). The faithful library import lands ~31% covered;
# api/collectors/semantic/known_works are exercised by their owning issues
# (#3 dedup, #4 collectors/quality, #5 api). Ratchet this back toward 80 as
# those issues add tests.
fail_under = 25

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Operational dedup CLIs: short-lived scripts that load/dump JSON caches and exit;
# the context-manager / suppress idioms (SIM105/SIM115) add noise without value here.
"scripts/perceptual_dedupe.py" = ["SIM105", "SIM115"]
"scripts/visual_dedupe.py" = ["SIM105", "SIM115"]

[tool.ruff.lint.isort]
known-first-party = ["fine_art_archive", "tools"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Ported domain library (issue #2). Relax the strict sub-flags that flood a
# faithful import (bare generics, untyped defs, Any returns, missing 3rd-party
# stubs). Real checks (assignment, arg-type, attr-defined, name, call) stay on.
# Tighten these back per-module as #3 (dedup), #4 (collectors/quality), and
# #5 (api) take ownership and add types.
[[tool.mypy.overrides]]
module = "fine_art_archive.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = false

# Third-party libraries that don't ship type stubs (or aren't installed in CI's
# type-check env). Keyed on the imported module so import-untyped is silenced.
[[tool.mypy.overrides]]
module = ["imagehash.*", "jsonschema.*", "yaml", "yaml.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
